MacViews: Disable embedding RWHVMac in browser UI's compositor

Bug: 845807, 840173, 846018
Change-Id: I97768c5c2085f8e1f29371bfedff5aaeebc956fa
Reviewed-on: https://chromium-review.googlesource.com/1070464
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561210}
Former-commit-id: b0c7ed414b3184e22efa85938ebf15c7271d9ee5